# jwt_salvo_demo

./: .env  .gitignore  AGENTS.md  Cargo.toml  README.md  ab_test.sh  build_android.sh  build_native_stable.sh  clear.sh  count.sh  debug.sh  fix.sh  forward.sh  full_test.sh  gen_EdDSA.sh  gen_rsa_keys.sh  generate_entities.sh  get_all_code.sh  get_token.sh  run.sh  sea-orm.md  sql_entity_gen.sh  std_build.sh  test.sh  toml_fmt.sh  watch.sh  zigbuild.sh
.cargo/: config.toml
app/: Cargo.toml  application.toml
app/casbin/: rbac_with_pattern_model.conf  rbac_with_pattern_policy.csv
app/src/: base.rs  controller.rs  main.rs  router.rs
app/src/controller/: demo.rs  mod.rs
app/src/demo/: mod.rs
app/src/rbac/: casbin.rs
auth/: Cargo.toml
auth/src/: lib.rs  middleware.rs  rbac.rs
biz/demo/: Cargo.toml
biz/demo/src/infrastructure/: db_init.rs  persistence.rs
biz/entities/src/: users.rs
crates/casbin/: Cargo.toml
crates/casbin/src/: lib.rs  rbac.rs
crates/config/: Cargo.toml
crates/config/src/: config.rs  lib.rs
crates/demo/: Cargo.toml
crates/demo/src/: db_init.rs  entity.rs  facade.rs  lib.rs  repository.rs  service.rs  value_object.rs
crates/demo/src/application/: facade.rs  mod.rs  service.rs
crates/demo/src/domain/: entity.rs  mod.rs  repository.rs  service.rs  value_object.rs
crates/demo/src/infrastructure/: db_init.rs  mod.rs  persistence.rs
crates/domain/: Cargo.toml
crates/domain/src/: dto.rs  endpoint.rs  facade.rs  lib.rs  repository.rs
crates/entities/: Cargo.toml
crates/entities/src/: users.rs
crates/ext/: Cargo.toml
crates/ext/src/: lib.rs  result.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: lib.rs  static_files.rs
crates/jwt/: Cargo.toml
crates/jwt/jwt-core/: Cargo.toml
crates/jwt/jwt-core/src/jwt_utils/: mod.rs  models.rs  secret_key.rs
crates/jwt/jwt-middleware/: Cargo.toml
crates/jwt/jwt-middleware/src/: lib.rs
crates/jwt/src/: lib.rs
crates/jwt/src/jwt_utils/: middleware.rs  mod.rs  models.rs  secret_key.rs
crates/orm/: Cargo.toml
crates/orm/src/: lib.rs
crates/schema/: Cargo.toml
crates/schema/src/: lib.rs
crates/server_handle/: Cargo.toml
crates/server_handle/src/: lib.rs  shutdown_handle.rs
dev_kit/: Cargo.toml  application.toml
dev_kit/casbin/: rbac_with_pattern_policy.csv
dev_kit/src/: config.rs  graceful_stop.rs  jwt.rs  lib.rs  middleware.rs  nacos.rs  rbac.rs  redisync.rs  result.rs  server_handle.rs
dev_kit/src/jwt_utils/: middleware.rs  mod.rs  secret_key.rs
dev_kit/src/nacos/: mod.rs  naming_service.rs  rpc.rs  service_instance.rs
jwt_utils/: Cargo.toml
jwt_utils/src/: lib.rs  middleware.rs
keys/: private_key.pem  public_key.pem
rbac/: Cargo.toml
rbac/src/: lib.rs
redisync/: Cargo.toml
redisync/src/: lib.rs
result/: Cargo.toml
result/src/: lib.rs
src/: controller.rs  jwt.rs  main.rs  models.rs
src/config/: mod.rs  redis.rs  result.rs  router.rs  write_response.rs
src/exclusive/: mod.rs  write_response.rs
src/jwt/: jwt_utils.rs  middleware.rs  mod.rs  secert_key.rs
src/rbac/: casbin.rs  create_policy_csv.rs  mod.rs
