[workspace]
members = ["app", "dev_kit"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
salvo = { version = "0.88.1", features = [
  "timeout",
  "concurrency-limiter",
  "http2-cleartext",
  "logging",
  "oapi",
] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
chrono = "0.4.42"
tokio = { version = "1.49.0", features = ["full"] }
stringzilla = "4.6.0"
salvo-casbin = "0.73.3"
anyhow = "1.0.100"
once_cell = "1.21.3"
casbin = "2.19.1"
bb8-redis = "0.26.0"
bb8 = "0.9.1"
mimalloc = { version = "0.1.48", features = ["no_thp", "override"] }
nacos-sdk = "0.5.3"
toml = { version = "0.9.11", default-features = false, features = [
  "parse",
  "serde",
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["local-time"] }
reqwest = { version = "0.13.1", default-features = false, features = [
  "json",
  "http2",
] }
serde_json = "1.0.149"

[profile.dev]
debug = true
debug-assertions = true
panic = "abort"
incremental = true

[profile.release]
overflow-checks = false
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
debug = 0
debug-assertions = false
incremental = false
panic = "abort"
