[workspace]
members = [
  "app",
  "crates/jwt",
  "crates/casbin",
  "crates/config",
  "crates/server_handle",
  "crates/ext",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
salvo = { version = "0.88.1", features = [
  "timeout",
  "concurrency-limiter",
  "http2-cleartext",
  "logging",
  "oapi",
] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
chrono = "0.4.42"
tokio = { version = "1.49.0", features = ["full"] }
stringzilla = "=4.4.0"
salvo-casbin = "0.73.3"
anyhow = "1.0.100"
once_cell = "1.21.3"
casbin = "2.19.1"
mimalloc = { version = "0.1.48", features = ["no_thp", "override"] }
toml = { version = "0.9.11", default-features = false, features = [
  "parse",
  "serde",
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["local-time"] }
serde_json = "1.0.149"
obfstr = "0.4.4"
my_jwt = { path = "crates/jwt" }
my_casbin = { path = "crates/casbin" }
my_config = { path = "crates/config" }
my_server_handle = { path = "crates/server_handle" }
my_ext = { path = "crates/ext" }

[profile.dev]
debug = true
debug-assertions = true
panic = "abort"
incremental = true

[profile.release]
overflow-checks = false
codegen-units = 1
lto = "thin"
opt-level = 2
strip = true
debug = 0
debug-assertions = false
incremental = false
panic = "abort"
