[workspace]
members = [
  "app",
  "crates/jwt",
  "crates/casbin",
  "crates/config",
  "crates/server_handle",
  "crates/ext",
  "crates/orm",
  "crates/demo",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
unwrap_used = { level = "warn", priority = -1 }
expect_used = { level = "warn", priority = -1 }
similar_names = "allow"
missing_errors_doc = "allow"
missing_safety_doc = "allow"
missing_panics_doc = "allow"
cast_precision_loss = "allow"
struct_excessive_bools = "allow"

[workspace.dependencies]
my_jwt = { path = "crates/jwt" }
my_casbin = { path = "crates/casbin" }
my_config = { path = "crates/config" }
my_server_handle = { path = "crates/server_handle" }
my_ext = { path = "crates/ext" }
my_orm = { path = "crates/orm" }
my_demo = { path = "crates/demo" }
salvo = { version = "0.92.0", features = [
  "timeout",
  "concurrency-limiter",
  "http2-cleartext",
  "logging",
  "oapi",
  "affix-state",
] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
chrono = "0.4.44"
tokio = { version = "1.52.1", features = ["full"] }
stringzilla = "=4.4.0"
salvo-casbin = "0.73.3"
anyhow = "1.0.102"
once_cell = "1.21.4"
casbin = "2.20.0"
mimalloc = { version = "0.1.48", features = ["no_thp", "override"] }
toml = { version = "1.1.2", default-features = false, features = [
  "parse",
  "serde",
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["local-time"] }
serde_json = "1.0.149"
obfstr = "0.4.4"
sea-orm = { version = "^2.0.0-rc.38", features = [
  "sqlx-mysql",
  "sqlx-postgres",
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "with-chrono",
  "debug-print",
  "macros",
  "with-uuid",
] }
log = "0.4.29"
uuid = { version = "1.23.1", features = ["v7", "serde", "fast-rng"] }

[profile.dev]
debug = true
debug-assertions = true
panic = "abort"
incremental = true

[profile.release]
overflow-checks = false
codegen-units = 1
lto = "thin"
opt-level = 2
strip = true
debug = 0
debug-assertions = false
incremental = false
panic = "abort"
