[package]
name = "jwt_salvo_demo"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
salvo = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
mimalloc = { workspace = true, features = [
  "local_dynamic_tls",
  "no_thp",
  "override",
] }
result = { version = "0.1.0", path = "../result" }
jwt_utils = { version = "0.1.0", path = "../jwt_utils" }
redisync = { version = "0.1.0", path = "../redisync" }
rbac = { version = "0.1.0", path = "../rbac" }
