[package]
name = "app"
version.workspace = true
edition.workspace = true

[dependencies]
salvo.workspace = true
serde.workspace = true
tokio.workspace = true
mimalloc.workspace = true
obfstr.workspace = true
my_ext.workspace = true
my_jwt.workspace = true
my_casbin.workspace = true
my_config.workspace = true
my_server_handle.workspace = true
