[package]
name = "app"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
my_ext.workspace = true
my_jwt.workspace = true
my_jwt_core.workspace = true
my_casbin.workspace = true
my_config.workspace = true
my_server_handle.workspace = true
my_orm.workspace = true
my_demo.workspace = true
anyhow.workspace = true
salvo.workspace = true
tokio.workspace = true
mimalloc.workspace = true
obfstr.workspace = true
sea-orm.workspace = true
