[package]
name = "auth"
version.workspace = true
edition.workspace = true

[dependencies]
salvo = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
stringzilla = { workspace = true }
once_cell = { workspace = true }
dev_kit = { path = "../dev_kit" }
salvo-casbin = { workspace = true }
casbin = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
