[package]
name = "dev_kit"
version.workspace = true
edition.workspace = true

[dependencies]
salvo = { workspace = true }
serde = { workspace = true }
simd-json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
redis = { workspace = true, features = ["tokio-comp"] }
bb8-redis = { workspace = true }
bb8 = { workspace = true }
