[package]
name = "my_demo"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
my_jwt_core.workspace = true
my_entities.workspace = true
my_schema.workspace = true
anyhow.workspace = true
serde.workspace = true
sea-orm.workspace = true
log.workspace = true
uuid.workspace = true
