[package]
name = "my_jwt"
version.workspace = true
edition.workspace = true

[dependencies]
salvo.workspace = true
serde.workspace = true
jsonwebtoken.workspace = true
stringzilla.workspace = true
once_cell.workspace = true
anyhow.workspace = true
tokio.workspace = true
chrono.workspace = true
my_ext.workspace = true
